--- a/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj.filters
+++ b/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClInclude Include="src\DUOLGraphicsEngine\TableLoader\TableLoader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\RenderManager\RenderQueue\RenderQueue.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\AnimationClip.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -108,6 +105,9 @@
     <ClInclude Include="src\DUOLGraphicsEngine\Util\ThreadPool\ThreadPool.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="src\DUOLGraphicsEngine\RenderManager\InstancingManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -138,9 +138,6 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLGraphicsEngine\TableLoader\TableLoader.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="src\DUOLGraphicsEngine\RenderManager\RenderQueue\RenderQueue.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLGraphicsEngine\ResourceManager\Resource\RenderObject.cpp">
@@ -177,6 +174,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLGraphicsEngine\ResourceManager\Resource\Light.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLGraphicsEngine\RenderManager\InstancingManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
