피직스 충돌 레이어 구현 중 / 플레이어 애니메이터 스테이트 쪼개는 중
 - 피직스 충돌 레이어 구현 중 / 플레이어 애니메이터 스테이트 쪼개는 중

--- a/DUOLPhysics/DUOLPhysics.vcxproj.filters
+++ b/DUOLPhysics/DUOLPhysics.vcxproj.filters
@@ -175,6 +175,7 @@
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsConvexMesh.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsFlags.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsDefines.h" />
+    <ClInclude Include="include\DUOLPhysics\Util\CollisionLayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLPhysics\System\PhysicsSystem.cpp" />
