--- a/DUOLPhysics/DUOLPhysics.vcxproj
+++ b/DUOLPhysics/DUOLPhysics.vcxproj
@@ -174,6 +174,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLPhysics\DUOLPhysics.h" />
+    <ClInclude Include="include\DUOLPhysics\Util\CollisionLayer.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsDataStructure.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsDefines.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsDescriptions.h" />
