이펙트 에디터 버그 수정 및 기능 추가. 게임 엔진 파티클 버그 수정.
이펙트 에디터 버그 수정 및 기능 추가. 게임 엔진 파티클 버그 수정.
1. 이펙트 에디터 세이브 로드 버그 수정
- 렌더링 데이터 세이브 방식 변경

2. BoostSerialize Text로 변경

3. 게임 엔진 파티클 렌더러 버그 수정

--- a/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
+++ b/DUOLEffectEditor/GraphicsEngine/GraphicsEngine.vcxproj
@@ -275,6 +275,7 @@
     <ClInclude Include="include\Core\Resource\Resource\ShaderClassInstance.h" />
     <ClInclude Include="include\Core\Pass\OITBlendPass.h" />
     <ClInclude Include="include\Core\Pass\PBRBake\PanoramaToCubeMap_Bake_Pass.h" />
+    <ClInclude Include="include\Export\PrevVersion.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Pass\PBRBake\BRDFLookUpTable_Bake_Pass.cpp" />
