EnemyManager, EnemySpawnTrigger, PhysicsScene
RayCast 버그 수정
몬스터 RayCast를 통해 벽 뒤에 플레이어 감지 못하도록 변경
EnemyManager 생성 로직 변경
EnemyGroupController CreateEnemy SpawnTrigger 밟았을 때 생성

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.cpp" />
     <ClCompile Include="src\DUOLClient\Util\BinaryTree.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Down.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Projectile.cpp" />
@@ -234,6 +235,7 @@
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.h" />
     <ClInclude Include="include\DUOLClient\Util\BinaryTree.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Projectile.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAttacks.h" />
