--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -54,6 +54,7 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\Projectile.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Down.cpp" />
     <ClCompile Include="src\DUOLClient\Util\BinaryTree.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -111,5 +112,6 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\Projectile.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Down.h" />
     <ClInclude Include="include\DUOLClient\Util\BinaryTree.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.h" />
   </ItemGroup>
 </Project>
