--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -55,6 +55,7 @@
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Down.cpp" />
     <ClCompile Include="src\DUOLClient\Util\BinaryTree.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\Weapon_Wave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -113,5 +114,6 @@
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Down.h" />
     <ClInclude Include="include\DUOLClient\Util\BinaryTree.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.h" />
+    <ClInclude Include="include\DUOLClient\Player\Weapon_Wave.h" />
   </ItemGroup>
 </Project>
