컨텐츠 프로그래밍 / 물리 기능 추가 중
 - 플레이어 컨트롤 조정 중
 - Physics 트리거도 레이어 기능 사용 가능하도록 수정
 - Physics 씬 쿼리를 위한 콜백 구현 중

--- a/DUOLPhysics/DUOLPhysics.vcxproj
+++ b/DUOLPhysics/DUOLPhysics.vcxproj
@@ -337,6 +337,7 @@
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsMesh.h" />
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsConvexMesh.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsFlags.h" />
+    <ClInclude Include="src\DUOLPhysics\Scene\QueryFilterCallback.h" />
     <ClInclude Include="src\DUOLPhysics\Actor\PhysicsUserData.h" />
     <ClInclude Include="src\DUOLPhysics\System\PhysicsEventDispatcher.h" />
     <ClInclude Include="src\DUOLPhysics\Actor\PhysicsStaticActorImpl.h" />
@@ -350,6 +351,7 @@
     <ClInclude Include="src\DUOLPhysics\Util\PhysicsTypeConverter.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLPhysics\Scene\QueryFilterCallback.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsConvexMesh.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsMesh.cpp" />
     <ClCompile Include="src\DUOLPhysics\Actor\PhysicsUserData.cpp" />
