--- a/DUOLPhysics/DUOLPhysics.vcxproj.filters
+++ b/DUOLPhysics/DUOLPhysics.vcxproj.filters
@@ -176,6 +176,7 @@
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsFlags.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsDefines.h" />
     <ClInclude Include="include\DUOLPhysics\Util\ObjectLayer.h" />
+    <ClInclude Include="src\DUOLPhysics\Scene\QueryFilterCallback.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLPhysics\System\PhysicsSystem.cpp" />
@@ -203,5 +204,6 @@
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsMesh.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsConvexMesh.cpp" />
     <ClCompile Include="src\DUOLPhysics\Util\ObjectLayer.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Scene\QueryFilterCallback.cpp" />
   </ItemGroup>
 </Project>
