--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
@@ -313,6 +313,7 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\AudioClip.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\AudioListener.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\AudioSource.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\GraphicsSettings.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\SoundManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_RandomFloat.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\UI\OnClick.cpp" />
