플레이어 구현 중 / 엔진 기능 추가 중
 - 오버드라이브 마지막 타격 로직 구현
 - 마지막 타격 이펙트 파티클 회수되도록 수정
 - 씬 로드 시 삭제되지 않는 DontDestroyOnLoad 구현 중

--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -60,6 +60,8 @@
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Overdrive.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\Weapon_AreaWave.cpp" />
+    <ClCompile Include="src\DUOLClient\Manager\GameManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -123,5 +125,7 @@
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Overdrive.h" />
+    <ClInclude Include="include\DUOLClient\Player\Weapon_AreaWave.h" />
+    <ClInclude Include="include\DUOLClient\Manager\GameManager.h" />
   </ItemGroup>
 </Project>
