--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\Manager\GameManager.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Overdrive.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.cpp" />
@@ -238,8 +239,10 @@
     <ClCompile Include="src\DUOLClient\Player\Weapon_Sword.cpp" />
     <ClCompile Include="src\DUOLClient\Util\EventListenerIDHolder.cpp" />
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\Weapon_AreaWave.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\Manager\GameManager.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAirborneCheck.h" />
@@ -301,6 +304,7 @@
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Down.h" />
     <ClInclude Include="include\DUOLClient\Player\Weapon_Wave.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Overdrive.h" />
+    <ClInclude Include="include\DUOLClient\Player\Weapon_AreaWave.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
