에디터 내에서 한글폰트 사용, 신 데이터로 저장이 가능하도록 변경.

--- a/DUOLEditor/DUOLEditor.vcxproj
+++ b/DUOLEditor/DUOLEditor.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="include\DUOLEditor\Util\RawTextures.h" />
     <ClInclude Include="include\DUOLEditor\Util\FileDialog\ReadFileDialog.h" />
     <ClInclude Include="include\DUOLEditor\Util\MessageBox\MessageBox.h" />
+    <ClInclude Include="include\DUOLEditor\UI\Widgets\InputFields\InputTextStr.h" />
     <ClInclude Include="src\DUOLEditor\UI\Widgets\Plots\PlotHistogram.cpp" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Menu\MenuList.h" />
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Layout\TreeNode.h" />
@@ -106,6 +107,7 @@
     <ClInclude Include="include\DUOLEditor\Util\FileDialog\WriteFileDialog.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLEditor\UI\Widgets\InputFields\InputTextStr.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\GraphicsSetting.cpp" />
     <ClCompile Include="src\DUOLEditor\Modules\ContentsBrowser.cpp" />
     <ClCompile Include="src\DUOLEditor\Util\MessageBox\MessageBox.cpp" />
